WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182697
REGRESSION (
r228299
): Broke reader mode in Safari
https://bugs.webkit.org/show_bug.cgi?id=182697
Summary
REGRESSION (r228299): Broke reader mode in Safari
Chris Dumez
Reported
2018-02-12 09:48:25 PST
r228299
broke reader mode in Safari.
Attachments
Patch
(2.79 KB, patch)
2018-02-12 09:52 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Rebased
(18.82 KB, text/plain)
2018-02-12 12:43 PST
,
Chris Dumez
no flags
Details
Patch
(13.15 KB, patch)
2018-02-12 16:32 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-02-12 09:48:44 PST
<
rdar://problem/37399012
>
Chris Dumez
Comment 2
2018-02-12 09:52:26 PST
Created
attachment 333600
[details]
Patch
Sam Weinig
Comment 3
2018-02-12 12:39:33 PST
Can an API test (or something) be made to test this?
Chris Dumez
Comment 4
2018-02-12 12:42:09 PST
(In reply to Sam Weinig from
comment #3
)
> Can an API test (or something) be made to test this?
I do not understand the issue yet so I haven't been able to write a test. It seems to be some kind of race as reader mode sometimes works and sometimes doesn't.
Chris Dumez
Comment 5
2018-02-12 12:43:11 PST
Created
attachment 333617
[details]
Rebased
Chris Dumez
Comment 6
2018-02-12 15:57:27 PST
(In reply to Chris Dumez from
comment #4
)
> (In reply to Sam Weinig from
comment #3
) > > Can an API test (or something) be made to test this? > > I do not understand the issue yet so I haven't been able to write a test. It > seems to be some kind of race as reader mode sometimes works and sometimes > doesn't.
I believe I now understand the issue and I am working on writing an API test. This said, this may take some time.
Chris Dumez
Comment 7
2018-02-12 16:32:41 PST
Created
attachment 333643
[details]
Patch
Chris Dumez
Comment 8
2018-02-12 16:42:57 PST
Comment on
attachment 333643
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=333643&action=review
> Source/WebCore/ChangeLog:26 > + riskier change at this point. I will follow-up on this issue.
I filed
https://bugs.webkit.org/show_bug.cgi?id=182720
for this.
Daniel Bates
Comment 9
2018-02-12 21:51:32 PST
(In reply to Chris Dumez from
comment #0
)
>
r228299
broke reader mode in Safari.
Can you please elaborate?
Daniel Bates
Comment 10
2018-02-12 21:54:14 PST
(In reply to Daniel Bates from
comment #9
)
> (In reply to Chris Dumez from
comment #0
) > >
r228299
broke reader mode in Safari. > > Can you please elaborate?
Never mind. You described how it broke here:
> Source/WebCore/ChangeLog:22 > + the policy response from the client. When the provisional load is committed, > + we call FrameLoader::stopLoading() which after
r228299
cancelled pending > + policy checks. Because we did not wait for the policy check response to > + commit the load, we would cancel it which would make the load fail.
WebKit Commit Bot
Comment 11
2018-02-13 12:46:53 PST
Comment on
attachment 333643
[details]
Patch Clearing flags on attachment: 333643 Committed
r228430
: <
https://trac.webkit.org/changeset/228430
>
WebKit Commit Bot
Comment 12
2018-02-13 12:46:54 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug